website/versioned_docs/version-2.0.x/use-cases/ai/federated-mcp-server/index.md
---
title: 'Federated MCP Client for Distributed Tool Ecosystems'
sidebar_label: 'Federated MCP Client'
sidebar_position: 11
description: 'Spice.ai federates external MCP servers for scalable, tool-driven AI applications in security, improving threat analysis.'
pagination_prev: null
pagination_next: null
---

Spice.ai federates external Model Context Protocol (MCP) servers over Server-Sent Events (SSE) for scalable, tool-driven AI applications in security, improving threat analysis with distributed tool ecosystems.

```mermaid
graph LR
    MCP1[MCP Server A] --> Spice[Spice]
    MCP2[MCP Server B] --> Spice
    MCP3[MCP Server C] --> Spice
    Spice -->|Unified Tools + Data| LLM[LLM]
    LLM --> Response[Response]
```

Unlike centralized AI orchestration platforms (e.g., Apache Airflow for AI workflows) that introduce complexity and latency, Spice.ai's federated MCP client approach supports modular, scalable tool integration with integrated data and AI capabilities. This makes it ideal for security applications requiring distributed, real-time threat intelligence, outperforming platforms with rigid, centralized architectures.

## Why Spice.ai?

- **MCP Federation**: Unifies outputs from multiple external MCP servers (e.g., threat intelligence, anomaly detection tools), enabling complex, distributed workflows without centralized orchestration, critical for security’s dynamic threat landscape.
- **SSE Connectivity**: Simplifies integration with remote tools via Server-Sent Events, reducing networking overhead compared to custom API integrations, ensuring efficient communication in distributed security systems.
- **Hybrid Access**: Combines MCP tool outputs with federated SQL queries and vector search (e.g., for log analysis or threat pattern matching), delivering comprehensive insights that surpass tool-only platforms.
- **Scalability**: Distributes tool execution across cloud and edge environments, optimizing performance and resilience for global security operations.

## Example

A security operations center federates external MCP servers for threat intelligence, behavioral analysis, and log parsing, delivering AI-driven threat reports enriched with real-time network data from Databricks. This streamlines incident response by unifying disparate tools, reducing response times compared to fragmented integrations, and enhances threat detection accuracy. The [Federated SQL Query recipe](https://github.com/spiceai/cookbook/blob/trunk/federation/README.md) provides patterns adaptable to MCP federation workflows.

## Benefits

- **Modularity**: Integrates diverse security tools into a cohesive workflow, improving flexibility and adaptability.
- **Scalability**: Supports distributed architectures for global security operations, handling high-volume threat data.
- **Efficiency**: Reduces integration complexity with standardized SSE connectivity, speeding up deployment.

### Learn More

- **Federated SQL Queries**: [Documentation](../../features/query-federation) and [Federated SQL Query Recipe](https://github.com/spiceai/cookbook/blob/trunk/federation/README.md).
- **Vector and Hybrid Search**: [Documentation](../../features/search) and [Searching GitHub Files Recipe](https://github.com/spiceai/cookbook/blob/trunk/search_github_files/README.md).
